image gap solved

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -685,6 +685,10 @@ ul {
         margin-bottom: 48px;
     }
 
+    .pt-40{
+        padding-top: 40px;
+    }
+    
     .footer-img {
         width: 300px;
         height: 104px;
@@ -751,13 +755,10 @@ ul {
 }
 
 @media (max-width:768px) {
-    .pb-60{
-        padding-bottom: 60px;
+    .pb-25{
+        padding-bottom: 25px;
     }
 
-    .pt-60{
-        padding-top: 60px;
-    }
 }
 
 @media (min-width:768px) {
